--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,25 +17,29 @@
             </div>
         <!-- </div> -->
         <div class="flex justify-between">
-            <div class="text-3xl mb-2">Hello, <%= user.username %> 👋</div>
-            <button class="bg-red-500 rounded-md px-3 py-2" href="/logout">Logout</button>
+            <div class="text-3xl">Hello, <%= user.username %> 👋</div>
+            <div class="text-white text-3xl font-bold">Profile</div>
+            <div>
+                <button class="bg-orange-500 rounded-md px-3 py-2 mr-3" onclick="window.location.href='/dashboard'">Dashboard</button>
+                <button class="bg-red-500 rounded-md px-4 py-2" onclick="window.location.href='/logout'">Logout</button>
+            </div>
         </div>
     
 
-        <h5 class="mb-10">You can create a new Post!</h5>
+        <h5 class="mt-10 mb-3">You can create a new Post!</h5>
         <form method="post" action="/post">
             <textarea placeholder="What's on your mind?" name="content" class="block p-1 h-20 w-1/3 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md"></textarea> 
             <input class="mt-3 px-3 py-2 bg-blue-500 rounded-md" type="submit" value="Create new Post">
         </form>
 
-        <div class="posts mt-20">
+        <div class="posts mt-16">
             <h3 class="text-2xl"><u>Your posts</u></h3>
-            <div class="postcontainer mt-5">
+            <div class="postcontainer mt-5 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                 <% if (user.posts.length===0) { %>
                     <p class="text-zinc-400">No posts yet!</p>
                     <% } else { %>
                 <% user.posts.reverse().forEach(function(post){ %>
-                    <div class="post w-1/3 p-4 mb-2 rounded-md border-2 border-zinc-800 bg-zinc-800">
+                    <div class="post p-4 mb-2 rounded-md border-2 border-zinc-800 bg-zinc-800">
                         <h4 class="text-blue-500 mb-1">@<%= user.username %></h4>
                         <p class="text-sm tracking-tight"><%= post.content %></p>
                         <div class="mt-2 text-sm"><%= post.likes.length %> likes</div>
